--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">FootballFixtures</string>
     <string name="leagues">Leagues</string>
     <string name="home">Home</string>
+    <string name="fixtures">Fixtures</string>
+    <string name="tables">Tables</string>
+    <string name="p">P</string>
+    <string name="gd">GD</string>
+    <string name="pts">PTS</string>
 </resources>
